# RUST_IPC_LIBC

./: .gitignore  README.md
ashmem/: Cargo.toml  process.sh
ashmem/src/: main.rs
mem_consumer/: Cargo.toml
mem_consumer/src/: main.rs
mem_producer/: Cargo.toml
mem_producer/src/: main.rs
posix/: Cargo.toml
posix/src/: main.rs
socket/: Cargo.toml
system_v_ipc/: Cargo.toml
system_v_ipc/src/: main.rs
