[package]
name = "ashmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [target.'cfg(target_os = "android")'.dependencies]
[dependencies]
libc = "0.2.149"
ndk-sys = "0.5.0"

[dependencies.ndk]
ndk = "0.8.0"
features = ["api-level-27"]